[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nvquery"
version = "0.1"
authors = [
	{ name="Daniel Barley", email="daniel_barley@aim.com" }
]
description = "Simple reader class for writing nvml queries to file"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"pynvml",
]

[project.urls]
Homepage = "https://github.com/danielbarley/nvquery"
Issues = "https://github.com/danielbarley/nvquery/issues"
